--- a/qtfuzzylite/ui/Term.ui
+++ b/qtfuzzylite/ui/Term.ui
@@ -187,8 +187,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>203</width>
-              <height>220</height>
+              <width>100</width>
+              <height>144</height>
              </rect>
             </property>
             <property name="sizePolicy">
@@ -251,8 +251,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>203</width>
-              <height>220</height>
+              <width>120</width>
+              <height>96</height>
              </rect>
             </property>
             <property name="sizePolicy">
@@ -295,8 +295,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>203</width>
-              <height>220</height>
+              <width>137</width>
+              <height>176</height>
              </rect>
             </property>
             <property name="sizePolicy">
@@ -458,8 +458,8 @@ sure 'x' is followed by 'y'.</string>
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>203</width>
-              <height>158</height>
+              <width>139</width>
+              <height>144</height>
              </rect>
             </property>
             <attribute name="label">
@@ -513,8 +513,8 @@ sure 'x' is followed by 'y'.</string>
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>203</width>
-              <height>158</height>
+              <width>136</width>
+              <height>111</height>
              </rect>
             </property>
             <property name="sizePolicy">
@@ -564,8 +564,8 @@ sure 'x' is followed by 'y'.</string>
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>203</width>
-              <height>158</height>
+              <width>128</width>
+              <height>144</height>
              </rect>
             </property>
             <property name="sizePolicy">
@@ -625,8 +625,8 @@ sure 'x' is followed by 'y'.</string>
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>203</width>
-              <height>158</height>
+              <width>134</width>
+              <height>144</height>
              </rect>
             </property>
             <property name="sizePolicy">
@@ -686,8 +686,8 @@ sure 'x' is followed by 'y'.</string>
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>203</width>
-              <height>158</height>
+              <width>134</width>
+              <height>144</height>
              </rect>
             </property>
             <property name="sizePolicy">
@@ -817,8 +817,8 @@ sure 'x' is followed by 'y'.</string>
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>203</width>
-              <height>220</height>
+              <width>129</width>
+              <height>78</height>
              </rect>
             </property>
             <property name="sizePolicy">
@@ -870,8 +870,8 @@ sure 'x' is followed by 'y'.</string>
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>203</width>
-              <height>220</height>
+              <width>124</width>
+              <height>78</height>
              </rect>
             </property>
             <property name="sizePolicy">
@@ -911,8 +911,8 @@ sure 'x' is followed by 'y'.</string>
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>203</width>
-              <height>220</height>
+              <width>124</width>
+              <height>78</height>
              </rect>
             </property>
             <property name="sizePolicy">
@@ -962,7 +962,7 @@ sure 'x' is followed by 'y'.</string>
             <bool>true</bool>
            </property>
            <property name="currentIndex">
-            <number>0</number>
+            <number>1</number>
            </property>
            <widget class="QWidget" name="page_16">
             <property name="geometry">
@@ -1038,6 +1038,9 @@ sure 'x' is followed by 'y'.</string>
                    <height>100</height>
                   </size>
                  </property>
+                 <property name="horizontalScrollBarPolicy">
+                  <enum>Qt::ScrollBarAlwaysOff</enum>
+                 </property>
                  <property name="editTriggers">
                   <set>QAbstractItemView::NoEditTriggers</set>
                  </property>
@@ -1063,6 +1066,9 @@ sure 'x' is followed by 'y'.</string>
                    <height>100</height>
                   </size>
                  </property>
+                 <property name="horizontalScrollBarPolicy">
+                  <enum>Qt::ScrollBarAlwaysOff</enum>
+                 </property>
                  <property name="editTriggers">
                   <set>QAbstractItemView::AllEditTriggers</set>
                  </property>
@@ -1083,8 +1089,8 @@ sure 'x' is followed by 'y'.</string>
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>203</width>
-              <height>251</height>
+              <width>162</width>
+              <height>154</height>
              </rect>
             </property>
             <attribute name="label">
